<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/liveInfoSettings"
        android:key=".LiveInfoSettings_lite"
        android:layout="@layout/settings">
        
    <ListPreference
			android:key="background"
			android:title="@string/backgroundTitle"
			android:summary="@string/backgroundSummary"
			android:entries="@array/backgroundEntries"
			android:entryValues="@array/backgroundValues"
			android:defaultValue="black"
	/>
    <PreferenceScreen
    		android:key="timeText"
    		android:title="@string/timeTextTitle"
    		android:summary="@string/timeTextSummary">
    		
    		<CheckBoxPreference
					android:key="showTime"
					android:title="@string/showTimeTitle"
					android:summaryOn="@string/showTimeOn"
					android:summaryOff="@string/showTimeOff"
					android:defaultValue="true"
					android:disableDependentsState="false"
			/>
			<CheckBoxPreference
		            android:key="24hFormat"
		            android:title="@string/timeFormatTitle"
		            android:summaryOn="@string/timeFormatOn"
		            android:summaryOff="@string/timeFormatOff"
		            android:defaultValue="true"
		            android:dependency="showTime" 
		    />
   			<ListPreference
   					android:key="timeFont"
   					android:title="@string/font"
   					android:entries="@array/fontEntries"
   					android:entryValues="@array/fontValues"
   					android:dependency="showTime" 
   					android:defaultValue=""
   			/>
   			<ListPreference
   					android:key="timeTextColor"
   					android:title="@string/textColor"
   					android:entries="@array/textColorEntries"
   					android:entryValues="@array/textColorValues" 
   					android:dependency="showTime"
   					android:defaultValue="white"
   			/>
   			<Preference 
   					android:key="timeTextSize"
   					android:title="@string/textSize"
   					android:dependency="showTime"
   			/>
   			<Preference 
   					android:key="timeTextPosition"
   					android:title="@string/textPosition"
   					android:dependency="showTime"
   			/>  			
   			<ListPreference
   					android:key="timeTextAlign"
   					android:title="@string/textAlign"
   					android:entries="@array/textAlignEntries"
   					android:entryValues="@array/textAlignValues"
   					android:dependency="showTime" 
   					android:defaultValue="center"
   			/>
   			<Preference 
   					android:key="timeTextTransparency"
   					android:title="@string/textTransparency"
   					android:dependency="showTime"
   			/> 
   	</PreferenceScreen>    
    
   	<PreferenceScreen
    		android:key="dateText"
    		android:title="@string/dateTextTitle"
    		android:summary="@string/dateTextSummary">
    		
    		<CheckBoxPreference
					android:key="showDate"
					android:title="@string/showDateTitle"
					android:summaryOn="@string/showDateOn"
					android:summaryOff="@string/showDateOff"
					android:defaultValue="true"
					android:disableDependentsState="false"
			/>
			<ListPreference
					android:key="dateFormat"
					android:title="@string/dateFormatTitle"
					android:entries="@array/dateFormatEntries"
					android:entryValues="@array/dateFormatValues"
					android:dependency="showDate"
					android:defaultValue="mm/dd/yyyy"
			/>
    		<ListPreference
   					android:key="dateFont"
   					android:title="@string/font"
   					android:entries="@array/fontEntries"
   					android:entryValues="@array/fontValues"
   					android:dependency="showDate"
   					android:defaultValue=""
   			/>  
   			<ListPreference
   					android:key="dateTextColor"
   					android:title="@string/textColor"
   					android:entries="@array/textColorEntries"
   					android:entryValues="@array/textColorValues" 
   					android:dependency="showDate"
   					android:defaultValue="white"
   			/>
   			<Preference 
   					android:key="dateTextSize"
   					android:title="@string/textSize"
   					android:dependency="showDate"
   			/>
   			<Preference 
   					android:key="dateTextPosition"
   					android:title="@string/textPosition"
   					android:dependency="showDate"
   			/>
   			<ListPreference
   					android:key="dateTextAlign"
   					android:title="@string/textAlign"
   					android:entries="@array/textAlignEntries"
   					android:entryValues="@array/textAlignValues"
   					android:dependency="showDate" 
   					android:defaultValue="center"
   			/>   
   			<Preference 
   					android:key="dateTextTransparency"
   					android:title="@string/textTransparency"
   					android:dependency="showDate"
   			/>			
   	</PreferenceScreen>
   	<PreferenceScreen
    		android:key="batteryText"
    		android:title="@string/batteryTextTitle"
    		android:summary="@string/batteryTextSummary">
   			
   			<CheckBoxPreference
					android:key="showBattery"
					android:title="@string/showBatteryTitle"
					android:summaryOn="@string/showBatteryOn"
					android:summaryOff="@string/showBatteryOff"
					android:defaultValue="true"
					android:disableDependentsState="false"
			/>
			<CheckBoxPreference
					android:key="showBatteryText"
					android:title="@string/showBatteryTextTitle"
					android:summaryOn="@string/showBatteryTextOn"
					android:summaryOff="@string/showBatteryTextOff"
					android:defaultValue="true"
					android:dependency="showBattery"
			/>
   			<ListPreference
   					android:key="batteryFont"
   					android:title="@string/font"
   					android:entries="@array/fontEntries"
   					android:entryValues="@array/fontValues" 
   					android:dependency="showBattery"
   					android:defaultValue=""
   			/>
   			<ListPreference
   					android:key="batteryTextColor"
   					android:title="@string/textColor"
   					android:entries="@array/textColorEntries"
   					android:entryValues="@array/textColorValues" 
   					android:dependency="showBattery"
   					android:defaultValue="white"
   			/>
   			<Preference 
   					android:key="batteryTextSize"
   					android:title="@string/textSize"
   					android:dependency="showBattery"
   			/>
   			<Preference 
   					android:key="batteryTextPosition"
   					android:title="@string/textPosition"
   					android:dependency="showBattery"
   			/>
   			<ListPreference
   					android:key="batteryTextAlign"
   					android:title="@string/textAlign"
   					android:entries="@array/textAlignEntries"
   					android:entryValues="@array/textAlignValues" 
   					android:dependency="showBattery"
   					android:defaultValue="center"
   			/>
   			<Preference 
   					android:key="batteryTextTransparency"
   					android:title="@string/textTransparency"
   					android:dependency="showBattery"
   			/>
   	</PreferenceScreen>
    <Preference
   			android:key="toWebsite"
   			android:title="Visit website"
   			android:summary="Download backgrounds or ask questions, leave a comment or add feature requests"
	/>
	<Preference
   			android:key="toMarket"
   			android:title="Buy full version"
   			android:summary="It includes any choice of background colors, grayscale colors for text and background, more fonts and the option to show currently playing song"
	/>
</PreferenceScreen>